--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,8 @@
 .color {
-  color: #0c081b;
-  color: #7f00ff;
+  color: #080514;
+  color: #5100a1;
+  color: #0f011b;
+  color: #7f00ffb3;
   color: #8000ff4d;
   color: #ffffff;
   color: #ffffff80;
